--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
  
         header{
                 background-image: url(https://secure.static.tumblr.com/087b559389fcc9d64fc61b050cc64037/ok5opqy/VmAnd8qoq/tumblr_static_tumblr_static__focused_v3.jpg);
+                width: 860px;
             }
             
       
