--- a/style.css
+++ b/style.css
@@ -127,8 +127,8 @@ body {
 	.about {
 		float:left;
 		position:relative;
-		left:45%;
-		margin-top:-30%;
+		margin-top:-27%;
+		width:860px;
 		
 	}
 	
@@ -136,18 +136,19 @@ body {
 		background-color:#FFF;
 		border-radius: 10px;
 		box-shadow:2px 2px 3px #aaaaaa;
+		margin-left:42.5%;
 	}
 	.about h1 {
 		font-weight:900;
 		color:#FFF;
 		line-height:34px;
 		margin-top:8px;
+		text-align:center;
 	}
-	.about h3 {
-		margin-top:5px;
-		font-size:18px;
-		color:#FFF;
-		line-height:18px;
+	.about h2 {
+		text-align:center;
+		font-size:20px;
+		color:white;
 	}
 	.about p {
 		font-size:14px;
