--- a/style.css
+++ b/style.css
@@ -144,19 +144,15 @@ body {
 		line-height:34px;
 		margin-top:8px;
 		text-align:center;
+		text-shadow:3px 3px 3px #cccccc;
 	}
 	.about h2 {
 		text-align:center;
 		font-size:20px;
 		color:white;
+		text-shadow:3px 3px 3px #cccccc;
 	}
-	.about p {
-		font-size:14px;
-		margin-top:15px;
-		color:#bc9010;
-		line-height:20px;
-    
-	}
+	
 	
 	.personal-info {
     width: 300px;
