--- a/style.css
+++ b/style.css
@@ -116,6 +116,23 @@ body {
 		background-color:#f6c500;
 	}
 	
+	.like_and_reblog_buttons {
+                border: 1px solid #e8e8e8;
+                border-radius: 3px;
+                list-style: none;
+            }
+
+        .like_and_reblog_buttons li {
+                float: left;
+                margin: 0;
+                padding: 7px 15px;
+                height: 20px;
+            }
+
+        .like_and_reblog_buttons li:first-child {
+                border-right: 1px solid #e8e8e8;
+            }
+	
     #profile {
 		
 		background-position:center bottom, left top;
