--- a/style.css
+++ b/style.css
@@ -195,8 +195,7 @@ body {
   
 	.tabs {
 		height:116px;
-		position: absolute;
-		margin-top:-14px;
+		
 	}
 	.tabs li {
 		float:left;
@@ -210,7 +209,9 @@ body {
 		background-repeat:no-repeat;
 		font-size:20px;
 		text-align:center;
-    color: #333;
+                color: #333;
+                background-color:#fdc62a ;
+	
 	}
 
 
