--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
         h1 {font-size: 37px;}
 	h2 {font-size: 30px;}
 	h3 {font-size: 20px;}
-	h4 {font-size: 15px;}
+	
 	h5 {font-size: 13px;}
 	
 	h3.sub-title {
@@ -54,6 +54,12 @@ body {
 		line-height:16px;
 		margin-left:28px;
 		display:block;
+	}
+	
+	 h4 {
+		line-height:24px;
+		font-size:15px;
+		color: #444;
 	}
 	
 	
