--- a/style.css
+++ b/style.css
@@ -56,10 +56,14 @@ body {
 		display:block;
 	}
 	
-	 h4 {
-		line-height:24px;
-		font-size:15px;
-		color: #444;
+	h4 {
+		line-height:17px;
+		color: #f4c024;
+		font-size:14px;
+		margin-left:10px;
+		font-weight: normal;
+		padding:2px 6px;
+		float:right;
 	}
 	
 	
