--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
         }
  
        #content #posts .text {
-               font-size:11px;
+               font-size:13px;
         }
  
       #content #posts .metadata {
@@ -50,7 +50,16 @@ body {
         h1 {font-size: 37px;}
 	h2 {font-size: 30px;}
 	h3 {font-size: 20px;}
-	h4 {font-size: 15px;}
+	h4 {
+		line-height:17px;
+		color: #f4c024;
+		font-size:14px;
+		margin-left:10px;
+		font-weight: normal;
+		padding:2px 6px;
+		float:right;
+		
+	}
 	h5 {font-size: 13px;}
 	
 	h3.sub-title {
