--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
 		float:left;
 		width:30px;
 		height:30px;
-		background:#222 url('../images/social_facebook.png') no-repeat 5px 5px;
+		background:#222 url('Project4-expanded-web-design/images/social_facebook.png') no-repeat 5px 5px;
 	}
 	.social-twitter {
 		float:left;
