--- a/style.css
+++ b/style.css
@@ -97,13 +97,13 @@ body {
 		float:left;
 		width:30px;
 		height:30px;
-		background:#222 url('../images/social_facebook.png') no-repeat 5px 5px;
+		background:#222 url('images/social_facebook.png') no-repeat 5px 5px;
 	}
 	.social-twitter {
 		float:left;
 		width:30px;
 		height:30px;
-		background:#222 url('../images/social_twitter.png') no-repeat 5px 5px;
+		background:#222 url('images/social_twitter.png') no-repeat 5px 5px;
 	}
 	.social-googleplus {
 		float:left;
