--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,17 @@ body {
                 color: #333;
 	}
 
-
+        .tabs li label{
+		color:#a87f09;
+		background-color:#f4c024;
+		float:left;
+		padding:4px 7px;
+		border-radius: 3px;
+		-moz-border-radius: 3px;
+		-webkit-border-radius: 3px;
+        }
+        
+        
 	.tabs li.active a {
 		color:#fdc62a;
 	}
