--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,7 @@ body {
 		padding:4px 7px;
 		border-radius: 4px;
 		margin:15px;
+		text-decoration:none;
 		-moz-border-radius: 3px;
 		-webkit-border-radius: 3px;
         }
