--- a/css/style.css
+++ b/css/style.css
@@ -248,12 +248,13 @@ body {
 		color:#a87f09;
 		background-color:#f4c024;
 		float:left;
-		padding:4px 7px;
+		padding:10px 10px;
 		border-radius: 4px;
 		margin:15px;
 		text-decoration:none;
 		-moz-border-radius: 3px;
 		-webkit-border-radius: 3px;
+		font-size: 15px;
         }
         
         
