--- a/css/style.css
+++ b/css/style.css
@@ -519,7 +519,11 @@ body {
 	
 	#container {
 		width:300px;
-				margin-top:10px;
+		margin-top:10px;
+	}
+	
+	.header: {background-color: white;
+                  width: 300px;
 	}
 	
 	div.top {
