--- a/css/style.css
+++ b/css/style.css
@@ -522,9 +522,8 @@ body {
 		margin-top:10px;
 	}
 	
-	img {
-                  width: 322px;
-                  height: 180px;
+	header {
+                  width: 320px;
 	}
 	
         #content #posts {
