--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,12 @@ body {
 		display:block;
 		margin:10px 0 15px 10px;
 	}
+	
+	.about img{
+		width:320px;
+		height:180px;
+		
+	}
 	.about .photo-inner {
 		margin-left:30px;
 		width:192px;
