--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,8 @@ body {
 	.about img{
 		width:340px;
 		height:240px;
-		
+		margin-top:-10px;
+		margin-left:-10px;
 		
 	}
 	.about .photo-inner {
