--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,10 @@ body {
 		padding: 0px;
 		font-family:'Open Sans', Arial;
 		font-size: 12px;
+		text-decoration:none;
 	}
-	
-  
+
+
 	#container {
 		margin:0 auto;
 		width:860px;
@@ -16,37 +17,37 @@ body {
 	#content {
 		background-color:#FFF;
 	}
-	
+
 	#content #posts {
               background-color: white;
               width: 500px;
               margin: 0 auto 20px;
               padding:10px;
         }
- 
+
         #content #posts .title {
                font-size: 22px;
         }
- 
-       #content #posts .text {
+
+        #content #posts .text {
                font-size:13px;
         }
- 
-      #content #posts .metadata {
+
+        #content #posts .metadata {
                display: inline-block;
                width: 100%;
         }
-      #content #posts .reblogged {
+        #content #posts .reblogged {
               float: right;
        }
- 
+
         header{
                 background-color: white;
                 width: 860px;
             }
-            
-      
- 
+
+
+
         h1 {font-size: 37px;}
 	h2 {font-size: 30px;}
 	h3 {font-size: 20px;}
@@ -58,10 +59,10 @@ body {
 		font-weight: normal;
 		padding:2px 6px;
 		float:right;
-		
+
 	}
 	h5 {font-size: 13px;}
-	
+
 	h3.sub-title {
 		margin:15px 2px;
 	}
@@ -73,14 +74,14 @@ body {
 		margin-left:28px;
 		display:block;
 	}
-	
-	
+
+
 	div.top {
 		height:60px;
 		margin-bottom:20px;
 		overflow:hidden;
 	}
-	
+
 	.socialicons {
 		float:right;
 		margin-top:18px;
@@ -92,18 +93,18 @@ body {
 		padding:0;
 		margin-right:2px;
 	}
-  
+
 	.social-facebook {
 		float:left;
 		width:30px;
 		height:30px;
-		background:#222 url('images/social_facebook.png') no-repeat 5px 5px;
+		background:#222 url('../images/social_facebook.png') no-repeat 5px 5px;
 	}
 	.social-twitter {
 		float:left;
 		width:30px;
 		height:30px;
-		background:#222 url('images/social_twitter.png') no-repeat 5px 5px;
+		background:#222 url('../images/social_twitter.png') no-repeat 5px 5px;
 	}
 	.social-googleplus {
 		float:left;
@@ -132,7 +133,7 @@ body {
 	.social-mail:hover {
 		background-color:#f6c500;
 	}
-	
+
 	.like_and_reblog_buttons {
                 border: 1px solid #e8e8e8;
                 border-radius: 3px;
@@ -146,24 +147,22 @@ body {
                 height: 20px;
             }
 
-        
-	
-    #profile {
-		
+
+
+       #profile {
 		background-position:center bottom, left top;
 		background-repeat:repeat-x;
 		overflow:hidden;
-		background-color:#fdd42f;		
+		background-color:#fdd42f;
 	}
-	
+
 	.about {
 		float:left;
 		position:relative;
-		margin-top:-27%;
 		width:860px;
-		
+
 	}
-	
+
 	.about .photo-inner img {
 		background-color:#FFF;
 		border-radius: 10px;
@@ -174,7 +173,7 @@ body {
 		font-weight:900;
 		color:#FFF;
 		line-height:34px;
-		margin-top:8px;
+		margin-top:-200px;
 		text-align:center;
 		text-shadow:3px 3px 3px #cccccc;
 	}
@@ -184,15 +183,15 @@ body {
 		color:white;
 		text-shadow:3px 3px 3px #cccccc;
 	}
-	
-	
+
+
 	.personal-info {
-    width: 300px;
+                width: 300px;
 		float:right;
 		margin-top:30px;
 		min-height:230px;
 		margin-left:20px;
-    line-height: 1;
+                line-height: 1;
 		padding:20px 0 0 20px;
 	}
 	.personal-info li {
@@ -218,18 +217,18 @@ body {
 	.menu {
 		height:100px;
 		position:relative;
-    
+
 	}
 
-  
+
 	.tabs {
 		height:116px;
 		position: absolute;
-		margin-top:-14px;
 	}
 	.tabs li {
 		float:left;
 		height:116px;
+		list-style:none;
 	}
 	.tabs li > a {
 		padding-top:40px;
@@ -239,36 +238,37 @@ body {
 		background-repeat:no-repeat;
 		font-size:20px;
 		text-align:center;
-    color: #333;
+		list-style:none;
+                color: #333;
 	}
+
+        .tabs li label{
+		color:#a87f09;
+		background-color:#f4c024;
+		float:left;
+		padding:10px 10px;
+		border-radius: 4px;
+		margin:15px;
+		text-decoration:none;
+		-moz-border-radius: 3px;
+		-webkit-border-radius: 3px;
+		font-size: 15px;
+        }
 
 
 	.tabs li.active a {
 		color:#fdc62a;
+		text-decoration:none;
 	}
-	.tabs li .tab-profile {
-		background-color:#fdc62a ;
-		background-position:center 40px;
-	}
-	.tabs li .tab-resume {
-		background-color:#fdc62a;
-		background-position:center 30px;
-	}
-	.tabs li .tab-portfolio {
-		background-color:#fdc62a;
-		background-position:center 35px;
-	}
-	.tabs li .tab-contact {
-		background-color:#fdc62a;
-		background-position:center 41px;
-	}
-        #content #posts .permalink 
+
+
+        #content #posts .permalink
          {
         font-size:9px;
         margin-top:10px;
          }
-	
-    #resume {
+
+        #resume {
 		padding:20px;
 		overflow:hidden;
 	}
@@ -328,37 +328,38 @@ body {
 	}
 	.skills li {
 		margin-top:5px;
-    margin-bottom:15px;
-		float:left; 
-    font-size:13px;
-		padding-left:30px; 
-    line-height:17px;
-    color: #444;
+                margin-bottom:15px;
+		float:left;
+                font-size:13px;
+		padding-left:30px;
+                line-height:17px;
+                color: #444;
 	}
 	.skills li h4 {
 		float:left;
 		font-size:15px;
 		color: #444;
 	}
-  
-  .skills li .timelineDate {
+
+        .skills li .timelineDate {
 		line-height:17px;
 		color: #f4c024;
 		font-size:14px;
 		padding:2px 6px;
 	}
-  
-  .skill li p {
-    color: #666;
+
+        .skill li p {
+                color: #666;
 		font-size:20px;
-		
+
 	}
-      
-  
-  #portfolio {
+
+
+         #portfolio {
 		padding:0 20px 20px 20px;
 		overflow:hidden;
 	}
+
 	#portfolio .extra-text {
 		font-size:20px;
 		padding:24px 0;
@@ -366,7 +367,7 @@ body {
 		color: #999;
 		margin-bottom:20px;
 	}
-	
+
 	#portfolio-filter {
 		overflow:hidden;
 		padding:15px 0 0 15px;
@@ -385,8 +386,8 @@ body {
 	#portfolio-filter li a:hover {
 		background-color: #fdc62a;
 	}
-	
-    #contact {
+
+        #contact {
 		padding:30px 0;
 		overflow:hidden;
 	}
@@ -400,7 +401,7 @@ body {
 	.contact-form {
 		width:530px;
 	}
-	
+
 	.contact-info ul {
 		float:left;
 		margin-left:11px;
@@ -458,7 +459,7 @@ body {
 		-webkit-border-radius: 3px;
 		font-size: 13px;
 	}
-	
+
 
 	/* Media Queries */
 @media only screen and (min-width: 42.667em) and (max-width: 53.278) {
@@ -469,7 +470,7 @@ body {
 		/* Profile Section */
 	/*-------------------------------------------------------*/
 	/* About */
-	
+
 	.about h1 {
 		line-height:2.111em;
 		font-size:1.667em;
@@ -483,8 +484,8 @@ body {
 		width:23.889em;
 		margin-right:2.778em;
 	}
-  
- 
+
+
 	/*-------------------------------------------------------*/
 		/* Resume */
 	/*-------------------------------------------------------*/
@@ -495,9 +496,9 @@ body {
 	.skills-section {
 		width:16.667em;
 	}
-	
+
 		/* Portfolio */
-	
+
 	#portfolio-filter{
 		width:41.667em;
 		margin-right:0.556em;
@@ -514,14 +515,34 @@ body {
 
 
 @media only screen and (max-width: 479px) {
-	
+
 	#container {
-		width:300px;
-				margin-top:10px;
+		width:320px;
+		margin-top:10px;
 	}
-	
+
+	header {
+                  width: 340px;
+	}
+
+	#content {
+		width:340px;
+	}
+
+        #content #posts {
+              width: 320px;
+              margin: 0 auto 20px;
+              padding:10px;
+        }
+
+	#content #posts .photoset-inner{
+		width: 320px;
+	}
+
+
 	div.top {
 		height:50px;
+		width:320px;
 		margin-bottom:5px;
 	}
 
@@ -530,23 +551,42 @@ body {
 		display:block;
 		margin:10px 0 15px 10px;
 	}
+
+	.about img{
+		width:340px;
+		height:240px;
+		margin-top:-10px;
+		margin-left:-10px;
+
+	}
 	.about .photo-inner {
-		margin-left:40px;
-		width:192px;
-		height:212px;
+		margin-left:30px;
+		width:180px;
+
 		padding:12px 0 0 20px;
-	} 
+	}
+
+	.about .photo-inner img {
+		background-color:#FFF;
+		border-radius: 100px;
+		box-shadow:2px 2px 3px #aaaaaa;
+		margin-left:35%;
+		width:100px;
+		height:100px;
+	}
+
 	.about h1 {
 		line-height:38px;
 		text-align:center;
+		margin-top:-170px;
 	}
 	.about h3 {
 		font-size:14px;
 		line-height:14px;
 		text-align:center;
+		margin-top: -10px;
 	}
-	.about p {
-		text-align:center;
+
 	}
 	/* Personal info */
 	.personal-info {
@@ -562,9 +602,9 @@ body {
 	.personal-info li {
 		font-size:13px;
 	}
-  
-  
-  
+
+
+
 	.tabs {
 		padding-left:0px;
 	}
@@ -574,7 +614,9 @@ body {
 		font-size:13px;
 
 	}
-  
+
+
+
 		/* Resume */
 
 	#resume {
@@ -590,9 +632,9 @@ body {
 	.skills li  {
 		width:280px;
 	}
-  
+
 		/* Portfolio */
-	
+
 	#portfolio-filter {
 		width:280px;
 		padding: 0 0 0 0;
@@ -600,7 +642,7 @@ body {
 	/*-------------------------------------------------------*/
 		/* Contact */
 	/*-------------------------------------------------------*/
-	
+
 	.contact-info {
 		width:280px;
 	}
