--- a/css/style.css
+++ b/css/style.css
@@ -135,13 +135,12 @@ body {
 	}
 
 	.like_and_reblog_buttons {
-                border: 1px solid #e8e8e8;
-                border-radius: 3px;
+                
                 list-style: none;
             }
 
         .like_and_reblog_buttons p {
-                float: left;
+                float: right;
                 margin: 0;
                 padding: 7px 15px;
                 height: 20px;
