--- a/index.haml
+++ b/index.haml
@@ -19,7 +19,7 @@
               %a{:href => "/archive"} Archive
       %header
         .about
-          %img{:height => "488", :src => "https://secure.static.tumblr.com/087b559389fcc9d64fc61b050cc64037/ok5opqy/VmAnd8qoq/tumblr_static_tumblr_static__focused_v3.jpg", :width => "860"}/
+          %img{:src => "https://secure.static.tumblr.com/087b559389fcc9d64fc61b050cc64037/ok5opqy/VmAnd8qoq/tumblr_static_tumblr_static__focused_v3.jpg", :width => "100%"}/
           %h1 {Title}
           {block:Description}
           %h2 {Description}
